--- a/website/games/gameServers/mcServer/serverStatus.html
+++ b/website/games/gameServers/mcServer/serverStatus.html
@@ -126,13 +126,20 @@ body {
                                         <h1>Minecraft server map</h1>
                                     </div>
                                 </a>
+                                <div class="contentRowBox">
+                                    <div class="textBoxHalf">
+                                        <div class="decorationFiller";>
 
-                                <div class="imageBox">
-                                    <iframe scr="http://mc.kasia.games:8123/"></iframe>
+                                        </div>
+                                    </div>
+                                    <div class="textBoxHalf">
+                                        <p>
+                                            Server address: mc.kasia.games<br>Server port: 25565
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="textBox">
                                     <!-- add text here -->
-                    
                                     <h1>
                                         What is this server?
                                     </h1>
@@ -159,6 +166,10 @@ body {
                                     </div>
                 </div>
             </div>
+            <script type="text/javascript" src="../../../baseStyle/scripts/decorationFiller.js"></script>
+                <script>
+                    window.addEventListener('load', decorationFil("../../../"))
+                </script>
             <script type="text/javascript" src="https://github.breq.dev/mcstatus/mcstatus.js"></script>
         </ul>  
     </nav>
