--- a/website/home/home.html
+++ b/website/home/home.html
@@ -189,5 +189,8 @@ body {
                                     </div>
                 </div>
                 <script type="text/javascript" src="../baseStyle/scripts/decorationFiller.js"></script>
+                <script>
+                    window.addEventListener('load', decorationFil("../"))
+                </script>
         </ul>  
     </nav>
