added new emails

--- a/website/games/gameServers/mcServer/serverStatus.html
+++ b/website/games/gameServers/mcServer/serverStatus.html
@@ -161,7 +161,8 @@ body {
                 <div class="backgroundBottomImage">
                     <div class="titleBox">
                                     <h1>
-                                        If you found bugs or spelling mistakes please contact: koningkaas05@gmail.com
+                                        If you found bugs or spelling mistakes please contact: website.support@kasia.games <br>
+                                        If you found bugs or other problems with a game server please contact: gameserver.support@kasia.games
                                     </h1>
                                     </div>
                 </div>
