Signed-off-by: youri <youridevrije05@gmail.com>

--- a/website/games/gameServers/mcServer/serverStatus.html
+++ b/website/games/gameServers/mcServer/serverStatus.html
@@ -121,11 +121,6 @@ body {
                                 <div class="textBox">
                                 <div class="mc-status" data-mc-server="[mc.kasia.games]"></div>
                                 </div>
-                                <a href="http://mc.kasia.games:8123/" aria-label="Goes to the map of the Minecraft server.">
-                                    <div class="linkTextBox">
-                                        <h1>Minecraft server map</h1>
-                                    </div>
-                                </a>
                                 <div class="contentRowBox">
                                     <div class="textBoxHalf">
                                         <div class="decorationFiller";>
@@ -144,7 +139,7 @@ body {
                                         What is this server?
                                     </h1>
                                     <p> 
-                                        mc.kasia.games is a vannila survival Minecraft server made for Minecraft 1.19.3. The server works on Bedrock and Java and has a working online map using Dynmap
+                                        mc.kasia.games is a vanilla survival Minecraft server made for Minecraft java 1.20.1.
                                     </p>
                                 </div>
                             </div>
