--- a/website/home/home.html
+++ b/website/home/home.html
@@ -108,7 +108,7 @@ body {
                                         <div class="textBoxHalf">
                                         <!-- add text here -->
                                             <p>
-                                            Hello i'm Youri the maker of this website. I'm a creative and curious person and like making things. My curiosity helps to motivate me. I used that motivation to learn new things like programming and pixel art.
+                                            Hello i'm Youri the maker of this website. I'm a creative and curious person and like making things. My curiosity helps to motivate me. I use that motivation to learn new things like programming and pixel art.
                                             </p>
                                             <h1>hobby's</h1>
                                             <p>
