--- a/website/games/games/parkourGame3/parkourGame.html
+++ b/website/games/games/parkourGame3/parkourGame.html
@@ -3,7 +3,7 @@
 <head>
 <title>kasia games</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href ="../../baseStyle/base.css" rel="stylesheet">
+<link href ="../../../baseStyle/base.css" rel="stylesheet">
 </head>
 <style>
     body, html {
@@ -50,41 +50,40 @@ body {
                 
                 <!-- background -->
                 <div class="backgroundTopImage">
+                    <div class="titleBox">
+                        <!-- add title here -->
+                    </div>
                 </div>
                 <div class="backgroundMidImage">
                     <div class="containerBox">
                         <div class="contentBox">
-                            <div class="contentBackgroundTopImage">
-                                <div class="titelBox">
-                                </div>
-                            </div>
-                                <div class="contentBackgroundMidImage">
-                                    <div class="textBox">
-                                        <!-- add text here -->
+                            <div class="textBox">
+                                <!-- add text here -->
 
-                                        <h1>
-                                            What wil you see here.
-                                        </h1>
-                                        <p>
-                                            Games i made most of them are javascript games.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="contentBackgroundBottomImage">
+                                <iframe src="https://editor.p5js.org/Kaasman/full/__gsfYK4I"></iframe>
+                                <h1>
+                                </h1>
+                                <p> 
+                                </p>
                             </div>
-                            </div>
+                        </div>
                         <div class="waterContent">
 
                         </div>
+                        
+                        <div class="textSideImage">
                         </div>
                     </div>
                 </div>
                 <div class="backgroundBottomImage">
                     <div class="titleBox">
                                     <h1>
-                                        If you found bugs or spelling mistakes please contact: koningkaas05@gmail.com
+                                        If you found bugs or spelling mistakes please contact: website.support@kasia.games <br>
+                                        If you found bugs or other problems with a game server please contact: gameserver.support@kasia.games
                                     </h1>
                                     </div>
                 </div>
+            </div>
+            <script type="text/javascript" src="../baseStyle/scripts/decorationFiller.js"></script>
         </ul>  
     </nav>
