--- a/website/games/games.html
+++ b/website/games/games.html
@@ -72,6 +72,11 @@ body {
                                         <h1>Game servers</h1>
                                     </div>
                                 </a>
+                                <a href="gameServers/gamesMenu.html">
+                                    <div class="linkTextBox">
+                                        <h1>Games</h1>
+                                    </div>
+                                </a>
                                 </div>
                                 <div class="contentBackgroundBottomImage">
                             </div>
