--- a/website/games/games/gamesMenu.html
+++ b/website/games/games/gamesMenu.html
@@ -69,6 +69,23 @@ body {
                                             Games i made most of them are javascript games.
                                         </p>
                                     </div>
+
+                                    <a href="parkourGame3/parkourGame.html">
+                                        <div class="imageBox">
+                                            <img alt="parkourGame3" src="parkourGame3/images/linkImage.png" style="width: 100%">
+                                        </div>
+                                        <div class="linkTextBox">
+                                            <h1>
+                                                Parkour Game 3
+                                            </h1>
+                                            <p>
+                                                A platformer made with javascript.
+                                            </p>
+                                            <p>
+                                                Status: unfinished.
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                                 <div class="contentBackgroundBottomImage">
                             </div>
