--- a/website/games/games.html
+++ b/website/games/games.html
@@ -72,7 +72,7 @@ body {
                                         <h1>Game servers</h1>
                                     </div>
                                 </a>
-                                <a href="gameServers/gamesMenu.html">
+                                <a href="games/gamesMenu.html">
                                     <div class="linkTextBox">
                                         <h1>Games</h1>
                                     </div>
